Updated CSS to format page better. Fixed header, added grid , removed horizontal scrolling. Still need to make page look pretty, fix span sidplay, and maybe vertical scrolling?

--- a/main.css
+++ b/main.css
@@ -1,7 +1,65 @@
 body,
 html {
-  /* height:100%; */
+  /*height:100%;*/
 
   margin: 0px;
   padding: 0px;
+  overflow-x: hidden;
+}
+
+body {
+  grid-template-areas: 
+  "head"
+  "main"
+  "foot";
+}
+
+header {
+  grid-area: head;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav ul {
+  list-style-type: none;
+
+}
+
+nav ul li{
+  float: left;
+  padding-right: 10px;
+}
+
+nav ul li a {
+  display: block;
+  text-align: center;
+}
+
+main {
+  grid-area: main;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-height: 50%;
+}
+
+.store-item{
+  max-width: 25%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.store-item img {
+  height: 50%;
+}
+
+/*.store-item span {
+  need to fix somehow. Is currently screwed up because of .store-item slex-direction: column
+  this is putting each span on its own line because they are not wrapped in a div or p or something
+  might have to change layout for it to work because I dont know if we can modify the html
+}*/
+
+footer {
+  grid-area: foot;
 }
